# pypackage-test

./: Dockerfile  main.py  noxfile.py  pyproject.toml
.github/actions/setup/: action.yml
.github/workflows/: cd-code-quality.yml
src/pypackage_test/: __init__.py
