[project]
name = "pypackage-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Kundan", email = "61063959+kundan-de@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "nox>=2025.5.1",
    "pandas>=2.3.2",
    "scikit-learn>=1.2.2",
]

[project.scripts]
pypackage-test = "pypackage_test:main"

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "ruff>=0.12.12",
]
test = [
    "pytest>=8.4.2",
]
